# skydel-custom-signal

./: CMakeLists.txt  README.md  custom_signal_data.h  custom_signal_interface.h
.github/workflows/: ubuntu_build.yml  windows_build.yml
common/: custom_signal_nav_msg_from_file.cpp  custom_signal_nav_msg_from_file.h
example_beidou_b1c/: CMakeLists.txt  custom_b1c.cpp  custom_b1c.h  custom_b1c_codes.cpp  custom_b1c_codes.h  custom_b1c_data.xml  custom_b1c_downlink.csv  custom_b1c_nav_message.cpp  custom_b1c_nav_message.h  custom_b1c_pilota.xml  custom_b1c_pilotb.xml
example_galileo_e1/: CMakeLists.txt  custom_e1.cpp  custom_e1.h  custom_e1.pro  custom_e1_downlink.csv  custom_e1b.xml  custom_e1c.xml  downlink.csv  e1_code.cpp  e1_code.h  e1_nav_msg_from_file.cpp  e1_nav_msg_from_file.h
example_gps_ca/: CMakeLists.txt  ca_nav_msg_from_file.cpp  ca_nav_msg_from_file.h  coarse_acquisition_code.cpp  coarse_acquisition_code.h  custom_ca.cpp  custom_ca.h  custom_ca.xml  custom_ca_downlink.csv  downlink.csv
example_gps_tddm_ca/: CMakeLists.txt  custom_tddm_ca.cpp  custom_tddm_ca.h  custom_tddm_ca.xml
example_qzss_ca/: CMakeLists.txt  custom_qzss_ca.cpp  custom_qzss_ca.h  custom_qzss_ca.xml
